plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'raisetech'
version = '0.0.1-SNAPSHOT'
description = 'Student Management System'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations{
	compileOnly {
		extendsFrom annotationProcessor
	}
	mockitoAgent {
		canBeResolved = true
		canBeConsumed = false
		transitive = false
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//Webアプリケーション基盤
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	// Apache Commons Lang ユーティリティ
	implementation 'org.apache.commons:commons-lang3'
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// OpenAPI Generator
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'

	// MySQLドライバ
	runtimeOnly 'com.mysql:mysql-connector-j:9.5.0'

	// MyBatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.0.1'

	// APサーバー(Tomcat)
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat-runtime'

	// SpringBoot Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'

	//MyBatis Test
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:4.0.1'

	//InMemoryDB(H2)
	testImplementation 'com.h2database:h2:2.4.240'

	// テスト実行基盤（JUnit Platformランチャー）
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Mockitoのインラインモック用エージェント（ByteBuddy）
	mockitoAgent "net.bytebuddy:byte-buddy-agent:1.17.8"
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs "-javaagent:${configurations.mockitoAgent.singleFile.absolutePath}"

	testLogging {
		events "passed", "failed", "skipped"
		exceptionFormat "full"
		showExceptions true
		showCauses true
		showStackTraces true
	}

	afterSuite { desc, result ->
		if (!desc.parent) {
			println ""
			println "========== Test Summary =========="
			println "Result   : ${result.resultType}"
			println "Total    : ${result.testCount}"
			println "Passed   : ${result.successfulTestCount}"
			println "Failed   : ${result.failedTestCount}"
			println "Skipped  : ${result.skippedTestCount}"
			println "=================================="
		}
	}
}
